# ladybug

./: CMakeLists.txt  Makefile
.github/docker/ubuntu-22.04-gcc13/: Dockerfile
.github/workflows/: nodejs-workflow.yml  precompiled-bin-workflow.yml  python-wheel-workflow.yml  wasm-workflow.yml  zizmor.yml
scripts/antlr4/: Cypher.g4  hash.md5
src/: CMakeLists.txt
src/antlr4/: Cypher.g4
src/binder/bind/: bind_ddl.cpp
src/binder/expression/: node_rel_expression.cpp
src/catalog/catalog_entry/: node_table_catalog_entry.cpp  rel_group_catalog_entry.cpp
src/common/copier_config/: csv_reader_config.cpp
src/common/enums/: CMakeLists.txt  drop_type.cpp  storage_format.cpp
src/function/: function_collection.cpp
src/function/aggregate/: CMakeLists.txt  percentile_disc.cpp
src/function/table/: disk_size_info.cpp  show_indexes.cpp  show_official_extensions.cpp  storage_info.cpp
src/include/binder/: bound_scan_source.h
src/include/common/: constants.h
src/include/main/: prepared_statement.h
src/include/planner/: subplans_table.h
src/include/storage/: checkpointer.h  database_header.h  disk_array.h  disk_array_collection.h  overflow_file.h  storage_version_info.h
src/main/: client_context.cpp  prepared_statement.cpp
src/optimizer/: cardinality_updater.cpp  filter_push_down_optimizer.cpp  projection_push_down_optimizer.cpp
src/parser/transform/: transform_ddl.cpp
src/planner/: subplans_table.cpp
src/planner/join_order/: cardinality_estimator.cpp
src/planner/operator/: logical_distinct.cpp
src/planner/plan/: append_extend.cpp  plan_join_order.cpp
src/processor/map/: map_copy_from.cpp  map_scan_node_table.cpp
src/processor/operator/: arrow_result_collector.cpp  recursive_extend.cpp
src/storage/: checkpointer.cpp  database_header.cpp  disk_array.cpp  disk_array_collection.cpp  overflow_file.cpp  storage_manager.cpp
test/api/: CMakeLists.txt  api_test.cpp  arrow_test.cpp  drop_index_test.cpp
test/storage/: compression_test.cpp
tools/shell/: CMakeLists.txt
tools/shell/printer/: CMakeLists.txt
(+59 files in other folders)
